# kdl-vqa

./: .gitignore  CITATION.cff  LICENSE  README.md  bvqa.py  codemeta.json  describe.py  questions.py
.github/workflows/: codemeta2cff.yml
data/: README.md  form_types.txt  image_rename_app.py
data/answers/: README.md
data/images/: README.md
data/templates/: image_rename_template.html
describer/: base.py  moondream.py  ollama.py  ovis.py  pyproject.toml  qwen-vl.py  smol.py
doc/: models.md
requirements/: README.md  base.txt  moondream.bash  moondream.txt  ollama.txt  ovis.bash  ovis.txt  qwen-vl.bash  qwen-vl.txt  smol.bash  smol.txt  torch.bash
requirements/freeze/: moondream.txt  ollama.txt  qwen-vl.txt  smol.txt
test/data/: questions.json  questions.py  test_cases.json
test/describe/: all.bash  describer.bash  settings.bash
test/requirements/: README.md  all-docker.bash  all.bash  bvqa.bash  describer.bash  settings.bash
utils/: helpers.py
