[tool.poetry]
name = "describe"
version = "0.1.0"
description = ""
authors = ["geoffroy-noel-ddh <geoffroy.noel@kcl.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.0"
einops = "^0.8.0"
pillow = "^10.3.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
timm = "^1.0.8"
llava = {git = "https://github.com/LLaVA-VL/LLaVA-NeXT.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
